# CAASM

./: .dockerignore  .env.example  .gitignore  CAASM.code-workspace  LICENSE  README.md  base.yml  compose.yml  dev.yml  prod.yml  pyproject.toml
.github/workflows/: notify.yml
docker/: es.Dockerfile  spark.Dockerfile
initdb.d/: 2024082800.nGQL  2024082801.nGQL  2024082802.nGQL  2024082803.nGQL  2024082804.nGQL  2024082900.nGQL  2024083000.nGQL  2024090100.nGQL  2024091000.nGQL  2024092800.nGQL
shared/: __init__.py  datetime.py  log.py  module.py  nebula.py  pyproject.toml
shared/models/: __init__.py  task.py
tests/: conftest.py  pytest.ini
tests/integration/: conftest.py  test_auth.py  test_nebula_facade.py
tests/unit/: test_module.py  test_nebula.py  test_perm_crud.py  test_permission.py  test_role_crud.py  test_user_crud.py
ui/: .env.demo  .env.development  .env.production  README.md  components.d.ts  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/: Dockerfile  base.yml  compose.yml  dev.yml  main.py  prod.yml  pyproject.toml  requirements.txt  settings.py  setttings.py
web/api/: __init__.py
web/api/v1/: __init__.py  common.py  field.py  field_collect.py  perm.py  role.py  task.py  user.py
web/common/: app.py  datetime.py  file.py  log.py  module.py  nebula.py  queue.py  websocket.py
web/model/: __init__.py  bulk.py  field.py  field_collect.py  perm.py  req.py  resp.py  task.py  token.py  user.py
worker/: Dockerfile  base.yml  dev.yml  main.py  prod.yml  pyproject.toml  requirements.txt  settings.py
(+89 files in other folders)
